--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "cookie": "^0.5.0",
     "cross-env": "^7.0.3",
     "cypress": "^10.8.0",
+    "esbuild-wasm": "^0.15.8",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
