--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   ],
   "dependencies": {
     "@prisma/client": "^4.3.1",
-    "@remix-run/node": "^1.7.1",
-    "@remix-run/react": "^1.7.1",
-    "@remix-run/serve": "^1.7.1",
-    "@remix-run/server-runtime": "^1.7.1",
+    "@remix-run/node": "^1.18.0",
+    "@remix-run/react": "^1.18.0",
+    "@remix-run/serve": "^1.18.0",
+    "@remix-run/server-runtime": "^1.18.0",
     "bcryptjs": "^2.4.3",
     "isbot": "^3.5.3",
     "react": "^18.2.0",
@@ -43,8 +43,8 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
-    "@remix-run/dev": "^1.7.1",
-    "@remix-run/eslint-config": "^1.7.1",
+    "@remix-run/dev": "^1.18.0",
+    "@remix-run/eslint-config": "^1.18.0",
     "@testing-library/cypress": "^8.0.3",
     "@testing-library/dom": "^8.18.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -63,6 +63,8 @@
     "cookie": "^0.5.0",
     "cross-env": "^7.0.3",
     "cypress": "^10.8.0",
+    "esbuild": "^0.18.9",
+    "esbuild-register": "^3.4.2",
     "esbuild-wasm": "^0.15.8",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
